cmake_minimum_required(VERSION 3.12)
project(aoc2018)
find_package (Threads)
set(CMAKE_CXX_FLAGS "-std=c++17 -Wall -Werror -Wextra -O2")
file(GLOB txt_files "*/*.txt")
file(COPY ${txt_files} DESTINATION "${CMAKE_BINARY_DIR}/inputs")
add_executable(aoc2018 main.cpp day1/day1.cpp day1/day1.h day2/day2.cpp day2/day2.h day3/day3.cpp day3/day3.h day4/day4.cpp day4/day4.h day5/day5.cpp day5/day5.h solve/solve.cpp solve/solve.h)
target_link_libraries (aoc2018 ${CMAKE_THREAD_LIBS_INIT})